Fixed modals image on iOS

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -160,12 +160,21 @@ h2 {
 }
 
 .image {
+
+    position: fixed;
+    z-index: -1;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100%;
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: center, center;
+    height: 100%; /* To compensate for mobile browser address bar space */
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-size: 100% 100%;
 }
+
+
 
 #instagram {
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
